# AdventOfCode

01/: part2.py
02/: part2.py
03/: part1.py  test_part1.py  test_part2.py
04/: part1.py  part2.py  test_part1.py  test_part2.py
05/: part1.py  part2.py
06/: part1.py  part2.py
07/: part1.py  part2.py  test_part1.py
08/: part1.py
09/: part1.py  test_part2.py
10/: part1.py  part2.py  test_part1.py  test_part2.py
11/: part1.py  part2.py  test_part1.py
12/: conftest.py  part2.py  test_part1.py
13/: part1.py  test_part1.py  test_part2.py
14/: part1.py  test_part1.py
15/: part1.py  part2.py  test_part1.py
16/: part1.py  test_part1.py
17/: part1.py  test_part1.py
2022/01/: part1.py
2022/02/: part1.py
2022/03/: part2.py
2022/04/: test_part1.py
2022/05/: part2.py  test_part1.py  test_part2.py
2022/06/: test_part1.py  test_part2.py
2022/07/: part1.py  test_part2.py
2022/08/: part1.py  part2.py  test_part1.py  test_part2.py
2022/09/: part2.py  test_part1.py
2022/10/: part2.py  test_part1.py
2022/11/: part1.py  test_part2.py
2022/12/: part1.py  test_part2.py
2022/13/: expected_output.txt  part2.py  result_output.txt
2022/14/: part1.py  part2.py  test_part1.py  test_part2.py
2022/15/: part1.py  part2.py  test_part2.py
2022/17/: +10  (+2 more)
2023/17/: part1.py  part2.py  pyproject.toml  test_part1.py  test_part2.py
2023/20/: part1.py  part2.py  pyproject.toml  test_part1.py  test_part2.py
2025/01/: part1.py  part2.py  pyproject.toml
2025/01/test/: test_part1.py  test_part2.py
template/: part1.py  test_part1.py  test_part2.py
(+131 files in other folders)
