[tool.poetry]
name = "Advent Of Code day XX"
version = "0.1.0"
description = "Solution for Advent Of Code day XX"
authors = ["Rafał Trójniak <git@trojniak.net>"]

[tool.poetry.dependencies]
python = "^3.13"
pytest = "^9.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
